--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.4.3</title>
+    <title>Test_AR_Ver 1.4.4</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <script src =“https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js”></script>
@@ -15,6 +15,10 @@
         <a-assets>
                 <a-asset-item id="model1" src="/TestARjs/entity.glb"></a-asset-item>
                 <a-asset-item id="model2" src="/TestARjs/redBox.glb"></a-asset-item>
+                <a-asset-item id="light01" src="/TestARjs/light01.glb" crossOrigin="anonymous"></a-assest-item>
+                <a-asset-item id="light02" src="/TestARjs/light02.glb" crossOrigin="anonymous"></a-assest-item>
+                <a-asset-item id="light03" src="/TestARjs/light03.glb" crossOrigin="anonymous"></a-assest-item>
+                <a-asset-item id="light04" src="/TestARjs/light04.glb" crossOrigin="anonymous"></a-assest-item>
                 <video id="videoA"  autoplay loop="false" src="/TestARjs/A.mp4"></video><!-- crossorigin="anonymous"-->
                 <video id="videoB"  autoplay loop="false" src="/TestARjs/B.mp4"></video><!-- crossorigin="anonymous"-->
         </a-assets>
@@ -27,11 +31,12 @@
                              scale="0.25 0.25 0.25"
                             >
                 </a-obj-model>
+                <a-gltf-model src="#light01"></a-gltf-model>
+                <a-gltf-model src="#light02"></a-gltf-model>
+                <a-gltf-model src="#light03"></a-gltf-model>
+                <a-gltf-model src="#light04"></a-gltf-model>
+        
 
-                <a-assest-item src="/TestARjs/light01.glb"></a-assest-item>
-                <a-assest-item src="/TestARjs/light02.glb"></a-assest-item>
-                <a-assest-item src="/TestARjs/light03.glb"></a-assest-item>
-                <a-assest-item src="/TestARjs/light04.glb"></a-assest-item>
             <!--</a-anchor>-->
         <!--</a-marker>-->
         
