--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.4.7</title>
+    <title>Test_AR_Ver 1.4.8</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
@@ -22,7 +22,7 @@
         
         <a-marker preset="hiro">
             <!--<a-anchor hit-testing-enabled="true">-->
-                <a-entity src="/projects/webar/Asset/Model/HotelIcon_bake.glb" crossOrigin="anonymous"></a-entity>
+                <a-entity src="https://www.creote.com/projects/webar/Asset/Model/HotelIcon_bake.glb" crossOrigin="anonymous"></a-entity>
                 <!--<a-gltf-model src="#light01"></a-gltf-model>
             <!--</a-anchor>-->
         </a-marker>
