--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a-assets>
         
         <a-marker preset="hiro">
-                <a-gltf-model src="#light01"></a-gltf-model>
+                <a-entity fbx-model="src:/TestARjs/A0.fbx"></a-entity>
         </a-marker>
         
         <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker.patt">
