--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.5.x</title>
+    <title>Test_AR_Ver 1.5.3</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
@@ -15,11 +15,11 @@
         <a-assets>
                 <video id="videoA"  autoplay loop="false" src="/TestARjs/A.mp4"></video><!-- crossorigin="anonymous"-->
                 <video id="videoB"  autoplay loop="false" src="/TestARjs/B.mp4"></video><!-- crossorigin="anonymous"-->
-                <a-asset-item id="A0" src="/TestARjs/A0.FBX"></a-asset-item>
+                <a-asset-item id="A0" Url="/TestARjs/A0.FBX"></a-asset-item>
         </a-assets>
         
         <a-marker preset="hiro">
-                <a-entity fbx-model="#cityModel" modify-materials></a-entity>
+                <a-entity fbx-model="#A0" modify-materials></a-entity>
         </a-marker>
         
         <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker.patt">
