--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test_AR_Ver 1.5.5</title>
+    <title>Test_AR_Ver 1.5.6</title>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
@@ -18,7 +18,7 @@
         </a-assets>
         
         <a-marker preset="hiro">
-                <a-entity gltf-model="A0" src="/TestARjs/A0.glb"></a-entity>
+                <a-entity position="-0.03872 0.35874 -0.09675" gltf-model="https://keithfrosty.github.io/TestARjs/A0.glb"></a-entity>
         </a-marker>
         
         <a-marker type="pattern" vidhandler emitevents="true" id="hiroMarkerA" Url="/TestARjs/pattern-marker.patt">
